--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
 
   <!-- Iframe die /ift.html laadt -->
-  <iframe id="appIframe" src="/ift.html"></iframe>
+  <iframe id="appIframe" src="/start.html"></iframe>
 
   <!-- Installeren knop -->
   <button class="installBtn" style="display: none;">Installeer op mijn telefoon</button>
